my commit message

--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     border-width: 1px;
     margin-bottom: 8px
 }
+.Index-div_86 {
+    align-items: center;
+    display: flex;
+    justify-content: center
+}
+.Index-a_1 {
+    border-color: rgb(117, 171, 237);
+    color: rgb(117, 171, 237);
+    margin-left: 7px
+}
 
 .Form-div_7 {
     justify-content: center;
@@ -43,7 +53,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     flex-direction: column;
     align-items: stretch;
     font-family: Helvetica;
-    padding: 33px
+    padding: 3px
 }
 .Form-h1_2 {
     font-size: 46px;
@@ -172,9 +182,26 @@ Index.prototype.render = function() {
                 })
             ),
             React.createElement("div", {
-                "data-tid": "At2nj9paj9j",
-                className: "Index-div_5"
-            }),
+                    "data-tid": "At2nj9paj9j",
+                    className: "Index-div_5"
+                },
+                React.createElement("div", {
+                        "data-tid": "A8eo3wbsz9ha",
+                        className: "Index-div_86"
+                    },
+                    React.createElement("span", {
+                            "data-tid": "A2y9dcypwz2u"
+                        },
+                        "Have an account?"
+                    ),
+                    React.createElement("a", {
+                            "data-tid": "Af8p6xldukjc",
+                            className: "Index-a_1"
+                        },
+                        "Log in"
+                    )
+                )
+            ),
             React.createElement("div", {
                     "data-tid": "Af7z5d962xm8",
                     className: "Index-div_6"
