--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
+ <link href='https://fonts.googleapis.com/css?family=Oleo+Script' rel="stylesheet" ></link>
 <style type="text/css">
 
 body{
