my commit message

--- a/index.html
+++ b/index.html
@@ -127,10 +127,13 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     border-color: transparent;
     background-color: transparent;
     font-size: 16px;
-    color: rgba(181, 212, 237, 1);
-    flex: 1
+    flex: 1;
+    color: #aaa
 }
 
+.TextField-input_4:focus {
+    outline: none
+}
 .TextField-i_33 {
     border-style: solid;
     border-radius: 52px;
@@ -139,7 +142,9 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     border-width: 2px;
     justify-content: center;
     display: flex;
-    align-items: center
+    align-items: center;
+    position: relative;
+    left: 1px
 }
 </style>
  </head><body><script type="text/javascript">
@@ -227,7 +232,7 @@ Phone.prototype.render = function() {
     var props = this.props;
     var state = this.state;
     return React.createElement("undefined", {
-        "data-tid": "Aa1j7s5uvqpj"
+        "data-tid": "Asplt8w7hdi"
     })
 }
 
@@ -350,7 +355,7 @@ Apps.prototype.render = function() {
     var props = this.props;
     var state = this.state;
     return React.createElement("undefined", {
-        "data-tid": "Aa1j7s5uvqpj"
+        "data-tid": "Asplt8w7hdi"
     })
 }
 
