--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 .Index-div_2 {
     height: 100%;
     width: 300px;
-    padding: 14px
+    padding: 14px;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 5s
 }
 .Index-div_5 {
     padding: 17px;
@@ -112,14 +115,14 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 }
 
 .TextField-div_10 {
-    padding: 10px;
+    padding: 7px;
     border-style: solid;
     border-width: 1px;
     border-color: rgba(178, 178, 178, 1);
     background-color: rgba(250, 250, 250, 1);
     border-radius: 3px;
     color: rgb(219, 65, 70);
-    align-items: stretch;
+    align-items: center;
     display: flex;
     flex-direction: row
 }
@@ -128,7 +131,8 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     background-color: transparent;
     font-size: 16px;
     flex: 1;
-    color: #aaa
+    color: #aaa;
+    height: 20px
 }
 
 .TextField-input_4:focus {
@@ -232,7 +236,7 @@ Phone.prototype.render = function() {
     var props = this.props;
     var state = this.state;
     return React.createElement("undefined", {
-        "data-tid": "Asplt8w7hdi"
+        "data-tid": "Ae24zo6g2ffu"
     })
 }
 
@@ -302,7 +306,8 @@ Form.prototype.render = function() {
             },
             React.createElement(TextField, {
                 "data-tid": "Aadguylxhkv",
-                name: "Full Name"
+                name: "Full Name",
+                minlen: 3
             })
         ),
         React.createElement("div", {
@@ -311,7 +316,8 @@ Form.prototype.render = function() {
             },
             React.createElement(TextField, {
                 "data-tid": "Aadguylxhkv",
-                name: "Username"
+                name: "Username",
+                minlen: 2
             })
         ),
         React.createElement("div", {
@@ -355,7 +361,7 @@ Apps.prototype.render = function() {
     var props = this.props;
     var state = this.state;
     return React.createElement("undefined", {
-        "data-tid": "Asplt8w7hdi"
+        "data-tid": "Ae24zo6g2ffu"
     })
 }
 
@@ -431,7 +437,7 @@ TextField.prototype.render = function() {
 TextField.prototype.textChange = function(e) {
     try {
         this.setState({
-            err: e.target.value.length < 3
+            err: e.target.value.length < (this.props.minlen || 5)
         })
     } catch (e) {
         console.log("=========================")
