my commit message

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     background-color: transparent;
     font-size: 16px;
     flex: 1;
-    color: #aaa;
-    height: 20px
+    color: #aaa
 }
 
 .TextField-input_4:focus {
